--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1 class="text-center mt-5 display-4 text-primary">Miguel Ubilla on Github</h1>
+    <div class="bg-light p-5 rounded-lg m-3">
+      <h1 class="display-4">Miguel Ubilla on GitHub!</h1>
+      <p class="lead">Proyectos y desarrollos web.</p>
+      <hr class="my-4">
+      <p>Javascript, NodeJs, CSS, Html5, Php, Codeigniter, MySql, MongoDB.</p>
+      <a class="btn btn-primary btn-lg" href="#" role="button" disabled>Pronto!</a>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
