--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="display-4">Miguel Ubilla on GitHub!</h1>
       <p class="lead">Proyectos y desarrollos web.</p>
       <hr class="my-4">
-      <p>Javascript, NodeJs, CSS, Html5, Php, Codeigniter, MySql, MongoDB.</p>
+      <p>Javascript, NodeJs, CSS, Html5, Php, Codeigniter, MySql, MongoDB, Bootstrap 5</p>
       <a class="btn btn-primary btn-lg" href="#" role="button" disabled>Pronto!</a>
     </div>
 
