--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Google fonts Source Code Pro -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet"> 
+    <!-- Prism css -->
+    <link rel="stylesheet" href="assets/css/prism.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/estilo.css?ver=1.1">
     <title>Miguel Ubilla on Github</title>
@@ -63,9 +65,9 @@
           <li class="list-group-item">
             <h5 class="titulo-lista">Javascript</h5>
             <ul>
-              <li class="item-lista">Javascript en archivo externo .js</li>
-              <li class="item-lista">Variables y constantes (var, let, const).</li>
-              <li class="item-lista">Cadenas.</li>
+              <li class="item-lista"><a href="javascript/index.html#list-item-1">Javascript en archivo externo .js</a></li>
+              <li class="item-lista"><a href="javascript/index.html#list-item-2">Variables y constantes (var, let, const).</a></li>
+              <li class="item-lista"><a href="javascript/index.html#list-item-3">Cadenas.</a></li>
               <li class="item-lista">Bucles (for).</li>
               <li class="item-lista">Funciones.</li>
               <li class="item-lista">Eventos (capturador de eventos, formularios).</li>
@@ -88,6 +90,7 @@
             </ul>
           </li>
         </ul>
+        <pre><code class="language-javascript">console.log('estare aqui para ser tu libreta de referencia');</code></pre>
       </div>
       <!-- contenido end -->
 
@@ -117,5 +120,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
+    <!-- Prism Js -->
+    <script src="assets/js/prism.js"></script>
   </body>
 </html>
