--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <li class="list-group-item">
             <h5 class="titulo-lista">Javascript</h5>
             <ul>
-              <li class="item-lista"><a href="javascript/index.html#list-item-1">Javascript en archivo externo .js</a></li>
-              <li class="item-lista"><a href="javascript/index.html#list-item-2">Variables y constantes (var, let, const).</a></li>
-              <li class="item-lista"><a href="javascript/index.html#list-item-3">Cadenas.</a></li>
+              <li class="item-lista"><a href="javascript/index#list-item-1">Javascript en archivo externo .js</a></li>
+              <li class="item-lista"><a href="javascript/index#list-item-2">Variables y constantes (var, let, const).</a></li>
+              <li class="item-lista"><a href="javascript/index#list-item-3">Cadenas.</a></li>
               <li class="item-lista">Bucles (for).</li>
               <li class="item-lista">Funciones.</li>
               <li class="item-lista">Eventos (capturador de eventos, formularios).</li>
